--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name"    : "bibteximport",
+  "name": "bibteximport",
   "productName": "Bibtex Import",
-  "version" : "0.1.0",
-  "main"    : "lib/main.js",
-  "application" : {
-    "name" : "Bibtex Import"
+  "version": "0.1.0",
+  "main": "lib/main.js",
+  "application": {
+    "name": "Bibtex Import"
   },
   "dependencies": {
-    "jquery": "^2.0.0",
     "bootstrap": "^3.0.0",
-    "coffee-script": "^1.8.0"
+    "coffee-script": "^1.8.0",
+    "jquery": "^2.0.0",
+    "nconf": "^0.8.2",
+    "request": "^2.67.0"
   },
   "devDependencies": {
     "electron-prebuilt": "^0.36.0"
