--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "bibteximport",
   "productName": "Bibtex Import",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "homepage": "http://www.batisengul.co.uk/",
   "main": "lib/main.js",
   "application": {
     "name": "Bibtex Import"
