--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   },
   "dependencies": {
     "bootstrap": "^3.0.0",
-    "coffee-script": "^1.8.0",
     "jquery": "^2.0.0",
     "nconf": "^0.8.2",
     "request": "^2.67.0"
   },
   "devDependencies": {
+    "coffee-script": "^1.8.0",
     "electron-prebuilt": "^0.36.0"
   },
   "scripts": {
     "start": "./scripts/compile.sh && electron ./",
-    "build": "./scripts/compile.sh && electron-packager ./ BibtexImport --platform=darwin --arch=x64 --version=0.36.0 --icon=./icons/icon.icns --overwrite --out=./bins/"
+    "build": "./scripts/build.sh"
   }
 }
