--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bibteximport",
   "productName": "Bibtex Import",
+  "description": "An automator for getting references off MathSciNet",
   "version": "1.0.1",
   "homepage": "http://focus.github.io/BibtexImport",
   "main": "lib/main.js",
@@ -15,16 +16,18 @@
   },
   "devDependencies": {
     "coffee-script": "^1.8.0",
-    "electron-prebuilt": "^0.36.0"
+    "electron-builder": "^2.5.0",
+    "electron-packager": "^5.2.0",
+    "electron-prebuilt": "^0.36.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-coffee": "^0.13.0",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-electron": "^2.0.1",
+    "grunt-electron-builder-wrapper": "^0.1.1",
+    "grunt-electron-debian-installer": "^0.1.0",
+    "load-grunt-tasks": "^3.4.0"
   },
   "scripts": {
-    "start": "./scripts/compile.sh && electron ./",
-    "build": "./scripts/build.sh",
-    "clean:dist": "rm -R ./dist",
-    "clean": "rm -R ./dist ./bins",
-    "package:osx": "electron-builder bins/BibtexImport-darwin-x64/BibtexImport.app --platform=osx --out=dist/osx64/ --config=support/installer.json ",
-    "package:win32": "electron-builder bins/BibtexImport-win32-ia32/ --platform=win --out=dist/win32/ --config=support/installer.json ",
-    "package:win64": "electron-builder bins/BibtexImport-win32-x64/ --platform=win --out=dist/win64/ --config=support/installer.json",
-    "package": "npm run clean:dist && npm run package:osx && npm run package:win32 && npm run package:win64"
+    "start": "grunt && electron ./"
   }
 }
