--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bibteximport",
   "productName": "Bibtex Import",
-  "description": "An automator for getting references off MathSciNet",
+  "description": "An automator for getting references from MathSciNet",
   "version": "1.0.1",
   "homepage": "http://focus.github.io/BibtexImport",
   "main": "lib/main.js",
@@ -15,17 +15,13 @@
     "request": "^2.67.0"
   },
   "devDependencies": {
-    "coffee-script": "^1.8.0",
-    "electron-builder": "^2.5.0",
-    "electron-packager": "^5.2.0",
     "electron-prebuilt": "^0.36.0",
     "grunt": "^0.4.5",
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-electron": "^2.0.1",
     "grunt-electron-builder-wrapper": "^0.1.1",
-    "grunt-electron-debian-installer": "^0.1.0",
-    "load-grunt-tasks": "^3.4.0"
+    "grunt-electron-debian-installer": "^0.1.0"
   },
   "scripts": {
     "start": "grunt && electron ./"
